--- a/solution/style.css
+++ b/solution/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     color: white;   
-    font-family:    "Helvetica Neue",Helvetica,Arial,sans-serif;    
+   
 }
 #container{
     position: relative;
@@ -19,17 +19,42 @@
     right: 0;
     background-color: rgba(66, 65, 65, 0.658)
 }
+.netflix{
+    font: Bowlby One SC;
+    font-weight: 400;
+    size: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: red;
+}
+.net{
+    color: white;
+    
+}
+.description p{
+    font-family: 'Sorts Mill Goudy';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 23px;
+}
 #description{
     border: 2px solid red;
     height: 100px;
     text-align: center;
-    padding-top: 15px;
+    padding: 30px;
+    
 
 }
 #survey-form{
     border: 2px solid red;
-    width: 300px;
-    padding: 20px;
+    display: flex;
+    justify-content: center;
+
+}
+.form{
+    width: 500px;
+    height:738px;
 }
 .box{
     margin: 20px;
