--- a/solution/style.css
+++ b/solution/style.css
@@ -8,16 +8,12 @@
 #container{
     position: relative;
 }
-.container2{
-    width: 90%;
-    height: 95%;
-}
+
 #title{
     margin: 10px 50px 10px 50px;
     width: 90%;
     height: 95%;
     position: absolute;
-    border: 2px solid red;
     top: 0;
     bottom: 0;
     right: 0;
@@ -25,8 +21,10 @@
 }
 .netflix{
     font: Bowlby One SC;
-    font-weight: 400;
-    size: 50px;
+    font-style: normal;
+    font-weight:800;
+    font-size: 50px;
+    letter-spacing: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -36,14 +34,13 @@
     color: white;
     
 }
-.description p{
+#description p{
     font-family: 'Sorts Mill Goudy';
     font-style: italic;
     font-weight: 400;
     font-size: 23px;
 }
 #description{
-    border: 2px solid red;
     height: 100px;
     text-align: center;
     padding: 30px;
@@ -51,18 +48,53 @@
 
 }
 #survey-form{
-    border: 2px solid red;
-    display: flex;
-    justify-content: center;
 
+    margin: 0 auto;
+    width: 400px;
+    height: 738px;
+    background-color: rgba(0, 0, 0, 0.678);
 
-}
-#survey-form form{
-    width: 200px;
-    height: 873px;
-    background-color: rgba(0, 0, 0, 0.192);
 
 }
 .box{
     margin: 20px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+
+
+}
+.box2{
+    width: 350px;
+    height: 40px;
+    margin: 10px 0 ;
+
+}
+
+#feedback {
+    width: 350px;
+    height: 80px;
+}
+.button{
+    background-color: red;
+    width: 160px;
+    height: 45px;
+    border: none;
+    color: white;
+    border-radius: 50px;
+    padding: 15px 20px 20px;
+    text-align: center;
+    display: inline-block;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+
+}
+.box4{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -10px;
 }
