--- a/style.css
+++ b/style.css
@@ -6,17 +6,20 @@
 }
 #container{
     position: relative;
+    background-image: url(./background_image.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    align-items: center;
+    justify-content: center;
+    /* padding: 30px 50px; */
 }
 
-#title{
-    margin: 10px 50px 10px 50px;
+#title {  
+    margin: 30px 50px;
     width: 90%;
-    height: 95%;
     position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    background-color: rgba(66, 65, 65, 0.384)
+    background-color: rgba(0, 0, 0, 0.021);
+    border: 2px solid red ;
 }
 .netflix{
     font-family: 'Bowlby One SC', cursive;
@@ -36,27 +39,25 @@
     font-family: 'Sorts Mill Goudy', serif;
     font-style: italic;
     font-weight: 400;
-    font-size: 23px;
+    font-size: 15px;
+    margin-top: 0;
 }
 #description{
-    height: 100px;
     text-align: center;
-    padding: 30px;
     
 
 }
 #survey-form{
 
     margin: 0 auto;
-    width: 400px;
-    height: 720px;
+    width: 33%;
     background-color: rgba(0, 0, 0, 0.678);
+    padding: 20px 30px 10px;
 
 
 }
 .box{
-    margin: 20px;
-    padding-top: 10px;
+    padding-top: 8px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -65,9 +66,9 @@
 
 }
 .box2{
-    width: 350px;
-    height: 40px;
-    margin: 10px 0 ;
+    width: 100%;
+    height: 45px;
+    /* margin: 10px 0 ; */
     color: black;
 
 }
@@ -76,8 +77,8 @@
 }
 
 #feedback {
-    width: 350px;
-    height: 80px;
+    width: 100%;
+    height: 50px;
 }
 .button{
     background-color: red;
@@ -99,5 +100,5 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: -20px;
+    margin-top: 0;
 }
